--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,6 @@
-MONGODB_URI="<mongodb+srv URI>"
+MONGODB_URI=mongodb://localhost/restaurant-list
+FACEBOOK_ID=SKIP
+FACEBOOK_SECRET=SKIP
+FACEBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
+SESSION_SECRET=ThisIsMySecret
+PORT=3000
